@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 
-dh = --dbg-package=phonon-dbg
+#dh = --dbg-package=phonon-dbg
 
 include /usr/share/pkg-kde-tools/qt-kde-team/2/debian-qt-kde.mk
 
@@ -29,6 +29,12 @@ override_dh_auto_install:
 
 override_dh_install:
 	dh_install --fail-missing
+
+override_dh_strip:
+	$(overridden_command) -plibphonon4 --dbg-package=phonon-dbg
+	$(overridden_command) -plibphononexperimental4 --dbg-package=phonon-dbg
+	$(overridden_command) -plibphonon-dev --dbg-package=phonon-dbg
+	$(overridden_command) --remaining-packages --dbg-package=phonon4qt5-dbg
 
 # shlibs is needed for library-packages.mk (strict shlibs) to work
 override_dh_makeshlibs:
